[gd_scene load_steps=3 format=3 uid="uid://c0ffmqaj8s7w0"]

[ext_resource type="Script" uid="uid://ro1lwgqmu1in" path="res://scripts/UI_Scripts/main_options.gd" id="1_3kms6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7e6vm"]
bg_color = Color(0.894922, 0.894922, 0.894922, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 3

[node name="Main_options" type="VBoxContainer"]
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -110.5
offset_right = 122.0
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kms6")

[node name="Continue" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/hover = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_7e6vm")
text = "Continue
"

[node name="Start" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/hover = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_7e6vm")
text = "Start
"

[node name="Options" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/hover = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_7e6vm")
text = "Options
"

[node name="Przegladanie Map" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/hover = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_7e6vm")
text = "Mapy
"

[node name="Quit" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/hover = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_7e6vm")
text = "Quit
"

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Przegladanie Map" to="." method="_on_przegladanie_map_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
